--- a/src/styles/helpers/mexins.scss
+++ b/src/styles/helpers/mexins.scss
@@ -51,7 +51,7 @@ height: $size;
 }
 
 @mixin visually-hidden {
-  pos
+  position: absolute !important;
   width: 1px !important;
   height: 1px !important;
   margin: -1px !important;
